# SuperMarioHD

./: CMakeLists.txt  Makefile  README.md
cmake/: Findsfml-audio.cmake  Findsfml-graphics.cmake  Findsfml-system.cmake  Findsfml-window.cmake  Findtinyxml2.cmake
source/: Geometry.h  SuperMarioGame.cpp
